<resources>
    <string name="app_name">Product Counter</string>
    <string name="camera">Start New Count</string>
    <string name="stop_camera">Stop Count</string>
    <string name="counted_object">Counted Object: %s</string>
    <string name="count_status">Status</string>
    <string name="need_help">Butuh bantuan?</string>
    <string name="select">Select item</string>

    <string name="title_machine">Machine</string>
    <string name="title_parameter">Parameter</string>
    <string name="title_size">Size</string>
    <string name="title_product">Product</string>
    <string name="title_shift">Shift</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_option">Option</string>
    <string name="title_runtime">Runtime</string>

    <string name="stop_time">Stop Time</string>
    <string name="downtime">Downtime</string>
    <string name="time">Time</string>

    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="reject">Reject</string>

    <string name="status_idle">Idle</string>
    <string name="status_active">Active</string>

    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_welcome">Welcome, %s</string>
    <string name="title_operator">Operator</string>

    <string name="title_machine_overview">Machine Overview</string>

    <string name="title_acc_info">Account Info</string>
    <string name="title_email">Username</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_last_op">Last Operation</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_exit">Exit</string>

    <string name="btn_agree">Agree</string>
    <string name="modal_tnc_title">Terms and Condition</string>
    <string name="terms_and_conditions">
        Selamat datang di Aplikasi OEE Mobile!

        Mohon perhatikan bahwa Aplikasi kami memprioritaskan privasi dan keamanan data pribadi Anda. Kami sangat menghormati dan melindungi hak-hak Anda terkait informasi pribadi yang Anda bagikan dengan kami. Dalam upaya untuk menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi data pribadi Anda, kami telah menyusun syarat dan ketentuan perlindungan data pribadi yang rinci berikut ini:

        1. Pengumpulan Data Pribadi:
        Kami hanya akan mengumpulkan data pribadi yang diperlukan untuk tujuan tertentu yang relevan dengan layanan kami. Ini mungkin termasuk informasi seperti nama, alamat email, nomor telepon, alamat, dan informasi profil lainnya.

        2. Penggunaan Data Pribadi:
        Data pribadi Anda akan digunakan dengan tujuan yang jelas dan sah, seperti:
        - Memproses transaksi dan permintaan yang Anda ajukan melalui Aplikasi.
        - Menyediakan layanan dan menggunakan fitur yang Anda pilih.
        - Mengirimkan informasi terkait pembaruan, penawaran, dan komunikasi penting terkait layanan kami.

        3. Keamanan Data Pribadi:
        Kami telah menerapkan langkah-langkah keamanan teknis dan organisasional yang kuat untuk melindungi data pribadi Anda dari akses, penggunaan, atau pengungkapan yang tidak sah. Kami berkomitmen untuk menjaga kerahasiaan informasi Anda.

        4. Penyimpanan Data Pribadi:
        Data pribadi Anda akan disimpan hanya selama diperlukan untuk tujuan yang ditetapkan dalam T&amp;C ini. Setelah data tidak diperlukan lagi, kami akan menghapusnya dengan aman sesuai dengan kebijakan penyimpanan kami.

        5. Berbagi Data Pribadi:
        Kami tidak akan menjual, menyewakan, atau membagikan data pribadi Anda kepada pihak ketiga tanpa izin Anda, kecuali diperlukan oleh hukum atau untuk tujuan yang telah dijelaskan dalam T&amp;C ini.

        6. Kebijakan dan Perlindungan Hukum:
        Sebagai Aplikasi [Nama Aplikasi], kami tunduk pada kebijakan perlindungan data pribadi yang berlaku sesuai dengan peraturan hukum yang berlaku di wilayah kami. Kebijakan-kebijakan ini termasuk, namun tidak terbatas pada:

        - Kepatuhan Hukum: Kami mematuhi dan menjalankan semua aktivitas dan pengambilan keputusan sesuai dengan peraturan hukum yang berlaku di Negara Kesatuan Republik Indonesia (NKRI).
        - Perlindungan Data Pribadi: Sejalan dengan Peraturan Menteri Komunikasi dan Informatika Nomor 27 Tahun 2022 Tentang Perlindungan Data Pribadi Dalam Sistem Elektronik, kami melindungi semua informasi yang diberikan oleh pengguna saat mendaftar, mengakses, dan menggunakan seluruh layanan Aplikasi [Nama Aplikasi].
        - Pemberitahuan dan Persetujuan: Kami hanya akan memberikan atau menggunakan data dan informasi yang dimiliki oleh pengguna sesuai dengan peraturan hukum yang berlaku, termasuk dalam hal diwajibkan oleh institusi yang berwenang berdasarkan ketentuan hukum yang berlaku, perintah resmi dari pengadilan, dan/atau perintah resmi dari instansi atau aparat yang bersangkutan.

        7. Hak Anda:
        Anda memiliki hak untuk:
        - Mengakses data pribadi Anda yang kami simpan.
        - Memperbaiki atau memperbarui data pribadi yang tidak akurat.
        - Menghapus data pribadi Anda dari basis data kami.

        8. Persetujuan:
        Dengan menekan tombol "Setuju" di bawah ini, Anda secara aktif memberikan izin kepada kami untuk mengumpulkan, menggunakan, dan menyimpan data pribadi Anda sesuai dengan syarat dan ketentuan yang tertera dalam dokumen ini. Jika Anda tidak setuju dengan syarat dan ketentuan ini, Anda dapat menutup pop-up ini dan tidak melanjutkan penggunaan Aplikasi.

        9. Kontak Kami

        Jika Anda memiliki pertanyaan tentang Kebijakan Privasi, silahkan hubungi kami di evomo.jeager@gmail.com

        Kami ingin menegaskan bahwa kami tidak bertanggung jawab atas pertukaran data yang dilakukan oleh pengguna sendiri di antara mereka. Kami berupaya untuk menjaga semua informasi yang Anda berikan dengan aman dan merahasiakannya
    </string>

    <string name="modal_logout_title">Warning</string>
    <string name="modal_logout_desc">Are you sure you want to leave?</string>
    <string name="modal_login_error_title">Login Failed</string>
    <string name="modal_login_error">Wrong username or password</string>

    <string name="modal_device_error_title">Launch Failed</string>
    <string name="modal_device_error">The device doesn\'t meet the required specifications</string>

    <string name="last_count">Last Count: %s</string>
    <string name="no_counted">No Object Counted</string>
    <string name="btn_stop">Stop Count</string>
    <string name="modal_stop_desc">Are you sure you want to stop operation?</string>
    <string name="btn_choose_obj">Choose Object</string>
    <string name="choose_obj">Point at the object!</string>

    <string name="error_start">Please fill all fields!</string>

    <string name="date">Date</string>
    <string name="machine">Machine</string>
    <string name="product">Product</string>
    <string name="parameter">Parameter</string>
    <string name="parameter_value">%s: %s</string>
    <string name="speed">Speed</string>
    <string name="speed_value">%s products per minutes</string>
    <string name="count">Count</string>
    <string name="operator">Operated by %s</string>
    <string name="timer">0</string>

    <string name="no_runtime">No Runtime Running</string>

    <string name="colon">%s:</string>

    <string name="info">Information</string>
    <string name="total_count">Total Count</string>
    <string name="in_out">In &amp; Out</string>
    <string name="dummy_number">100000</string>
    <string name="dummy_zero">0</string>

    <string name="oee">OEE</string>
    <string name="dummy_percentage">73,4 %</string>
    <string name="dummy_zero_percentage">0 %</string>
    <string name="availability">Availability</string>
    <string name="performance">Performance</string>
    <string name="quality">Quality</string>
    <string name="timeline">Timeline</string>

    <string name="total_production">Total Production</string>
    <string name="good_quality">Good Quality</string>
    <string name="status">Status</string>
    <string name="run">RUN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="password_err">Password must contain at least 8 characters</string>
    <string name="not_filled_err">Field must be filled</string>
    <string name="button_text_signin">Sign In</string>
    <string name="input_username">Input username</string>
    <string name="input_password">Input password</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="under_dev">Under Development</string>

    <string name="choose_model">Choose the Model</string>
    <string name="opencv">OpenCV</string>
    <string name="model_opencv">Pre-trained Model + OpenCV</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>