<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.OperatorFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownMesinOperator"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_machine"
        android:minWidth="150dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/dropdownShiftOperator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_mesin_operator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:inputType="none"
            android:minWidth="20dp"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownShiftOperator"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_shift"
        android:minWidth="150dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dropdownMesinOperator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_shift_operator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:inputType="none"
            android:minWidth="20dp"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownShiftOperator">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/infoTitle"
                style="@style/InfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statusTitle"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTitle" />

            <TextView
                android:id="@+id/status"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run"
                android:textColor="@color/green_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTitle" />

            <TextView
                android:id="@+id/totalTitle"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_production"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusTitle" />

            <TextView
                android:id="@+id/totalNum"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusTitle" />

            <TextView
                android:id="@+id/goodTitle"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_quality"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

            <TextView
                android:id="@+id/goodNum"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"
                android:textColor="@color/green_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

            <TextView
                android:id="@+id/rejectTitle"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goodTitle" />

            <TextView
                android:id="@+id/rejectNum"
                style="@style/MachineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goodTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/bulletChartContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardInfo"></FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>