<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownMesin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/title_machine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_mesin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownProduct"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/title_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownMesin">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownParameter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/title_parameter"
        app:layout_constraintEnd_toStartOf="@+id/dropdownUkuran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownProduct"
        >

        <AutoCompleteTextView
            android:id="@+id/autocomplete_parameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownUkuran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        android:layout_height="wrap_content"
        android:hint="@string/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dropdownParameter"
        app:layout_constraintTop_toBottomOf="@+id/dropdownProduct">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_ukuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <org.opencv.android.JavaCameraView
        android:id="@+id/cameraView"
        android:layout_width="370dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="@+id/dropdownUkuran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/countStatus"></org.opencv.android.JavaCameraView>

    <View
        android:id="@+id/statusCircle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/circle_status_idle"
        app:layout_constraintTop_toBottomOf="@+id/cameraView"
        app:layout_constraintEnd_toStartOf="@id/countStatus"
        android:backgroundTint="@color/red"
        ></View>

<!--    <View-->
<!--        android:id="@+id/statusCircleActive"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginRight="5dp"-->
<!--        android:background="@drawable/circle_status_active"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cameraView"-->
<!--        app:layout_constraintEnd_toStartOf="@id/countStatus"-->
<!--        android:backgroundTint="@color/green_700"-->
<!--        android:visibility="invisible"-->
<!--        ></View>-->

    <TextView
        android:id="@+id/countStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cameraView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/count_status"></TextView>

    <TextView
        android:id="@+id/countText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/countStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/counted_object"></TextView>

    <Button
        android:id="@+id/stopCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countText"
        android:backgroundTint="@color/green_500"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        ></Button>

    <View
        android:id="@+id/blur_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/timer_count"
        style="@style/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        />

<!--    <TextView-->
<!--        android:id="@+id/needHelp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/need_help"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/stopCount">-->
<!--    </TextView>-->
</androidx.constraintlayout.widget.ConstraintLayout>